# argsparser.cpp

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  QWEN.md  README.md  build.sh  example_manual  format.sh  run-simple-static-analysis.sh  test_manual  test_manual_compile
.github/: copilot-instructions.md
docs/: static-analysis.md
examples/: cpp23_example.cpp  example.cpp  integer_demo.cpp
include/: argsparser.hpp
src/: argsparser.cpp
tests/: test_argsparser.cpp  test_cpp23.cpp  test_float.cpp  test_integer_types.cpp  test_overflow.cpp
